--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generatorics",
   "version": "1.0.0",
-  "description": "Combinatorics library for JavaScript using generator functions.",
+  "description": "Combinatorics library for JavaScript using ES2015 generator functions. Generate power set, combination, and permutation.",
   "main": "generatorics.js",
   "directories": {
     "test": "test"
@@ -9,11 +9,17 @@
   "dependencies": {},
   "devDependencies": {
     "chai": "^3.5.0",
+    "jsdoc-to-markdown": "^1.3.3",
     "mocha": "^2.4.5"
   },
   "scripts": {
     "test": "mocha"
   },
   "author": "Andrew Carlson <acarl005@g.ucla.edu>",
-  "license": "ISC"
+  "license": "MIT",
+  "keywords": [
+    "Combinatorics",
+    "combination",
+    "permutation"
+  ]
 }
