--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "Andrew Carlson <acarl005@g.ucla.edu>",
   "license": "MIT",
   "keywords": [
-    "Combinatorics",
+    "combinatorics",
     "combination",
     "permutation"
   ]
