--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generatorics",
-  "version": "1.0.5",
-  "description": "Combinatorics library for JavaScript using ES2015 generator functions. Generate power set, combination, and permutation.",
+  "version": "1.0.6",
+  "description": "Efficient Combinatorics library for JavaScript using ES2015 generator functions. Generate power set, combination, and permutation.",
   "main": "generatorics.js",
   "directories": {
     "test": "test"
