--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generatorics",
-  "version": "1.0.8",
+  "version": "1.1.0",
   "description": "Efficient Combinatorics library for JavaScript using ES2015 generator functions. Generate power set, combination, and permutation.",
   "main": "generatorics.js",
   "engines": {
@@ -12,10 +12,12 @@
   "dependencies": {},
   "devDependencies": {
     "chai": "^3.5.0",
-    "jsdoc-to-markdown": "^1.3.3",
+    "eslint": "^3.14.0",
+    "jsdoc-to-markdown": "^3.0.0",
     "mocha": "^2.4.5"
   },
   "scripts": {
+    "lint": "eslint generatorics.js",
     "test": "mocha",
     "docs": "sed -n '/Documentation/q;p' README.md > README.bak.md; echo '## Documentation' >> README.bak.md; jsdoc2md generatorics.js >> README.bak.md && mv -f README.bak.md README.md"
   },
